<resources>
    <string name="app_name">Runway</string>
    <string name="facebook_app_id">473941820053002</string> <string name="fb_login_protocol_scheme">fb473941820053002</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="register_id">Register your\nID.</string>
    <string name="register_id_btn">REGISTER ID</string>
    <string name="save">SAVE</string>
    <string name="connect_to_wifi">Connect to\nWiFi.</string>
    <string name="Connecting_to_device">Connecting to\nDevice.</string>
    <string name="finding_a_device">Finding a device</string>
    <string name="add_home_address">Add your\nHome address.</string>
    <string name="next">NEXT</string>
    <string name="start_time">START TIME</string>
    <string name="end_time">END TIME</string>
    <string name="what_time_do_you_go_to_work">What time\ndo yo go to work?</string>
    <string name="manage_your_device">Manage your\ndevice.</string>
    <string name="mirror">MIRROR</string>
    <string name="status_connected">STATUS : CONNECTED</string>
    <string name="manage_your_mirror">Manage your\nMirror.</string>
    <string name="manage_your_alarm">Manage your\nAlarm.</string>
    <string name="manage_your_door_lock">Manage your\nDoor lock.</string>
    <string name="tap_to_unlock">TAP TO UNLOCK</string>
    <string name="configure_your_settings">Configure your\nSettings.</string>
    <string name="home_location">HOME LOCATION</string>
    <string name="destination">DESTINATION</string>
    <string name="time">TIME</string>
    <string name="wifi">WIFI</string>
    <string name="applying_settings_to_device">Applying Settings to\nDevice.</string>
    <string name="stop">STOP</string>
    <string name="tap_to_lock_door">TAP TO LOCK DOOR</string>
    <string name="tap_to_unlock_door">TAP TO UNLOCK DOOR</string>
    <string name="alarm">ALARM</string>
    <string name="doorlock">DOORLOCK</string>
    <string name="deepSleep">DEEP: %s</string>
    <string name="lightSleep">LIGHT: %s</string>
    <string name="nonSleep">NON: %s</string>
</resources>
