<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryColor"

    >
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginStart="@dimen/margin_large"
                      android:layout_marginEnd="@dimen/margin_large"
                      app:layout_constraintBottom_toBottomOf="parent">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      style="@style/TitleTextView"
                      android:text="@string/configure_your_settings"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnHomeLocation"
                    style="@style/AppButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_location"
                    android:textColor="@color/secondaryColor"
                    android:layout_marginTop="@dimen/margin_large"
            />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDestination"
                    style="@style/AppButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:textColor="@color/secondaryColor"
                    android:layout_marginTop="@dimen/margin_medium"
            />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTime"
                    style="@style/AppButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/secondaryColor"
                    android:layout_marginTop="@dimen/margin_medium"
            />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWifi"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:textColor="@color/secondaryColor"
                android:layout_marginTop="@dimen/margin_medium"
            />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>