<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.TimePickFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryColor"
    >
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                      android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      style="@style/TitleTextView"
                      android:text="@string/what_time_do_you_go_to_work"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartTime"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textColor="@color/secondaryColor"
                android:layout_marginTop="32dp"
            />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEndTime"
                    style="@style/AppButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:textColor="@color/secondaryColor"
                    android:layout_marginTop="16dp"
            />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>